--- a/ucSideBar.css
+++ b/ucSideBar.css
@@ -1,19 +1,25 @@
 /*------------------------------------------------------------------------------------------------*
  | Turns sidebar into a (semi-)permanent fixture & adds the ability for it to collapse & expand.  |
  *--------------------------------*---------------------------------------------------------------*
- | Originally by Giri Srinivasan. | Last tested on Firefox 124.                                   |
+ | Originally by Giri Srinivasan. | Last tested on Firefox 131.                                   |
  *--------------------------------*---------------------------------------------------------------*/
 
 :root {
   --uc-sidebar-collapsed: 40px;
-  --uc-sidebar-transition: 200ms;
+  --uc-sidebar-transition: 150ms;
   --uc-sidebar-open-delay: 50ms;
+  --uc-sidebar-open-function: ease-out;
   --uc-sidebar-close-delay: 200ms;
+  --uc-sidebar-close-function: ease-in;
+  --uc-sidebar-switcher-allowance: 12px; /* 16px[icon width]/2 + 4px[left pad] */
   --uc-sidebar-overlap-shadow-length: 8px;
   --uc-sidebar-overlap-shadow-opacity: 50%;
 
   &[uidensity="touch"] {
     --uc-sidebar-collapsed: 44px;
+  }
+  &[uidensity="compact"] {
+    --uc-sidebar-collapsed: 34px;
   }
   &[inFullscreen] {
     --uc-sidebar-collapsed: 1px;
@@ -31,18 +37,20 @@
 :root[inFullscreen] #sidebar-box, :root:not([inFullscreen]) #sidebar-box[autocollapse] {
   z-index: 1;
   overflow: hidden;
+  transition-duration: var(--uc-sidebar-transition);
+  transition-delay: var(--uc-sidebar-open-delay);
 
   #sidebar-title, #sidebar-switcher-arrow {
-    transition: opacity calc(var(--uc-sidebar-transition)/2)
-                        calc(var(--uc-sidebar-open-delay) + var(--uc-sidebar-transition)/4);
+    transition: opacity calc(var(--uc-sidebar-transition)/2) var(--uc-sidebar-open-function)
+                        calc(var(--uc-sidebar-open-delay) + var(--uc-sidebar-transition)/2);
   }
   ~ #sidebar-splitter {
     z-index: 2;
   }
-  ~ #appcontent {
+  ~ #tabbrowser-tabbox {
     position: relative;
 
-    > #tabbrowser-tabbox {
+    > #tabbrowser-tabpanels {
       position: absolute;
       height: 100%;
     }
@@ -52,7 +60,7 @@
     ~ #sidebar-splitter {
       clip-path: inset(0 calc(-1*var(--uc-sidebar-overlap-shadow-length)) 0 0);
     }
-    ~ #appcontent > #tabbrowser-tabbox {
+    ~ #tabbrowser-tabbox > #tabbrowser-tabpanels {
       right: 0;
     }
   }
@@ -60,12 +68,15 @@
     clip-path: inset(0 0 0 calc(-1*var(--uc-sidebar-overlap-shadow-length)));
   }
 
-  &:not(:hover, :has(~ #sidebar-splitter:hover)) {
-    max-width: var(--uc-sidebar-collapsed) !important;
-    min-width: var(--uc-sidebar-collapsed) !important;
+  &:not(:hover, :has(~ #sidebar-splitter:hover, ~ #sidebar-splitter[state="dragging"])) {
+    width: var(--uc-sidebar-collapsed) !important;
+    min-width: 0 !important;
+    transition-delay: var(--uc-sidebar-close-delay);
 
     #sidebar-title, #sidebar-switcher-arrow {
       opacity: 0 !important;
+      transition-timing-function: var(--uc-sidebar-close-function);
+      transition-delay: var(--uc-sidebar-close-delay);
     }
   }
   &:is(:hover, :has(~ #sidebar-splitter:hover)) ~ #sidebar-splitter {
@@ -74,22 +85,26 @@
   }
 }
 :root[inFullscreen] #sidebar-box {
-  transition: max-width var(--uc-sidebar-transition), min-width var(--uc-sidebar-transition),
-              opacity 0ms;
-  transition-delay: var(--uc-sidebar-open-delay);
+  transition-property: width, min-width, opacity;
+  transition-timing-function: var(--uc-sidebar-open-function), step-end, step-start;
 
   ~ #sidebar-splitter {
     transition: box-shadow var(--uc-sidebar-transition), opacity 0ms;
     transition-delay: var(--uc-sidebar-open-delay);
   }
-  ~ #appcontent > #tabbrowser-tabbox {
+  ~ #tabbrowser-tabbox > #tabbrowser-tabpanels {
     width: 100vw;
   }
 
-  &:not(:hover, :has(~ #sidebar-splitter:hover)) {
+  &:has(~ #sidebar-splitter[state="dragging"]) {
+    /* width, min-width, opacity */
+    transition-duration: 0ms, var(--uc-sidebar-transition), var(--uc-sidebar-transition);
+    transition-delay: 0ms, var(--uc-sidebar-open-delay), var(--uc-sidebar-open-delay);
+  }
+  &:not(:hover, :has(~ #sidebar-splitter:hover, ~ #sidebar-splitter[state="dragging"])) {
     opacity: 0;
-    transition-delay: var(--uc-sidebar-close-delay), var(--uc-sidebar-close-delay),
-                      calc(var(--uc-sidebar-close-delay) + var(--uc-sidebar-transition));
+    /* width, min-width, opacity */
+    transition-timing-function: var(--uc-sidebar-close-function), step-start, step-end;
 
     ~ #sidebar-splitter {
       opacity: 0;
@@ -99,19 +114,38 @@
   }
 }
 :root:not([inFullscreen]) #sidebar-box[autocollapse] {
-  transition-property: max-width, min-width;
-  transition-duration: var(--uc-sidebar-transition);
-  transition-delay: var(--uc-sidebar-open-delay);
+  transition-property: width, min-width;
+  transition-timing-function: var(--uc-sidebar-open-function), step-end;
 
+  > #sidebar-header {
+    transition: padding-left var(--uc-sidebar-transition) var(--uc-sidebar-open-function)
+                             var(--uc-sidebar-open-delay);
+  }
   ~ #sidebar-splitter {
     transition: box-shadow var(--uc-sidebar-transition) var(--uc-sidebar-open-delay);
   }
-  ~ #appcontent > #tabbrowser-tabbox {
+  &[hidden] ~ #tabbrowser-tabbox > #tabbrowser-tabpanels {
+    width: 100%;
+  }
+  &:not([hidden]) ~ #tabbrowser-tabbox > #tabbrowser-tabpanels {
     width: calc(100vw - var(--uc-sidebar-collapsed));
   }
-  &:not(:hover, :has(~ #sidebar-splitter:hover)) {
-    transition-delay: var(--uc-sidebar-close-delay);
+
+  &:has(~ #sidebar-splitter[state="dragging"]) {
+    /* width, min-width */
+    transition-duration: 0ms, var(--uc-sidebar-transition);
+    transition-delay: 0ms, var(--uc-sidebar-open-delay);
+  }
+  &:not(:hover, :has(~ #sidebar-splitter:hover, ~ #sidebar-splitter[state="dragging"])) {
+    /* width, min-width */
+    transition-timing-function: var(--uc-sidebar-close-function), step-start;
     
+    > #sidebar-header {
+      padding-left: calc(var(--uc-sidebar-collapsed)/2 - var(--uc-sidebar-switcher-allowance))
+                    !important;
+      transition-timing-function: var(--uc-sidebar-close-function);
+      transition-delay: var(--uc-sidebar-close-delay);
+    }
     ~ #sidebar-splitter {
       transition-delay: var(--uc-sidebar-close-delay);
     }
