--- a/ucSideBar.css
+++ b/ucSideBar.css
@@ -1,8 +1,6 @@
-/*------------------------------------------------------------------------------------------------*
- | Turns sidebar into a (semi-)permanent fixture & adds the ability for it to collapse & expand.  |
- *--------------------------------*---------------------------------------------------------------*
- | Originally by Giri Srinivasan. | Last tested on Firefox 132.                                   |
- *--------------------------------*---------------------------------------------------------------*/
+/**
+ * Turns sidebar into a (semi-)permanent fixture & adds the ability for it to collapse & expand.
+ */
 
 :root {
   --uc-sidebar-collapsed: 40px;
