Retained shadow when dragging to change width of collapsible sidebar.

--- a/ucSideBar.css
+++ b/ucSideBar.css
@@ -84,7 +84,9 @@
       transition-delay: var(--uc-sidebar-close-delay);
     }
   }
-  &:is(:hover, :has(~ #sidebar-splitter:hover)) ~ #sidebar-splitter {
+  &:is(
+    :hover, :has(~ #sidebar-splitter:hover, ~ #sidebar-splitter[state="dragging"])
+  ) ~ #sidebar-splitter {
     box-shadow: 0 0 var(--uc-sidebar-overlap-shadow-length)
                 rgb(0 0 0 / var(--uc-sidebar-overlap-shadow-opacity));
   }
